@@ -1,3 +1,9 @@
+Sat Mar 24 17:43:41 CET 2012  John Tytgat  <John.Tytgat@aaug.net>
+
+	* area.c (ValidateORGValue): Add.
+	(c_area, c_org): Use ValidateORGValue.
+	(Area_Ensure): Set SYMBOL_ABSOLUTE for absolute area.
+
 Sat Mar 24 16:48:47 CET 2012  John Tytgat  <John.Tytgat@aaug.net>
 
 	* fix.c, fix.h (Fix_CheckForOverflow): Add.
